Remove GWT build tasks