@@ -20,37 +20,6 @@
         </artifact:mvn>
     </target>
 
-    <!-- start the integrated gwt development server inplace with the current codebase -->
-    <target name="gwt-run">
-        <delete dir="war/WEB-INF/lib"/>
-        <artifact:mvn mavenHome="${maven.home}" fork="false">
-            <arg value="-o"/>
-            <arg value="-Pgwt"/>
-            <arg value="gwt:run"/>
-            <arg value="-Dgwt.extraJvmArgs=-XX:MaxPermSize=256M -Xmx512M -Dlogs.dir=${logs.dir}"/>
-            <arg value="-Dgwt.noserver=true"/>
-        </artifact:mvn>
-    </target>
-
-    <!-- start the integrated gwt development server in debug mode inplace with the current codebase -->
-    <target name="gwt-debug">
-        <artifact:mvn mavenHome="${maven.home}" fork="true">
-            <arg value="-o"/>
-            <arg value="-Pgwt"/>
-            <arg value="gwt:debug"/>
-        </artifact:mvn>
-    </target>
-
-    <!-- start the integrated gwt development server in debug mode inplace with the current codebase - add jrebel instrumentation -->
-    <target name="gwt-debug-jrebel">
-        <artifact:mvn mavenHome="${maven.home}" fork="true">
-            <arg value="-o"/>
-            <arg value="-Pgwt-jrebel"/>
-            <arg value="gwt:debug"/>
-            <arg value="-Djrebel.path=${jrebel.path}"/>
-        </artifact:mvn>
-    </target>
-
     <!-- Requires full maven install. -->
     <target name="jetty-demo">
         <delete dir="war/WEB-INF/lib"/>
